Fixed alignment issues on causes page and added links that were missing underneath the cards

--- a/src/containers/Causes/ExploreCauses/ExploreCauses.scss
+++ b/src/containers/Causes/ExploreCauses/ExploreCauses.scss
@@ -1,8 +1,8 @@
 .explore-causes-container {
   grid-column: 1/-1;
-  margin: $margin-r auto;
+  margin: $margin-l auto;
 
-  h2 {
+  h3 {
     text-align: center;
   }
 
